# Site

./: .gitignore  Cargo.toml  Rocket.toml
Templates/: blog_home.tera  ls
blog_backend/: Cargo.toml  Rocket.toml
blog_backend/src/: main.rs  site.rs
blog_frontend/Templates/: index.tera  template.tera
blog_frontend/static/: blog.css  navbar.css
blog_frontend/static/content/: introduction_text.bck  introduction_text.txt
blog_frontend/static/styles/: github.css
src/: main.rs  site.rs
static/: blog.css  blog_home.js  highlight.js  home.css  navbar.css  navbar.js
