[package]
name = "blog"
version = "0.1.0"
authors = ["bender <awsomearvinder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
pulldown-cmark = { version = "0.7", default-features = false, features = ["simd"] }
serde = {version = "1.0.106", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates","serve"]
